--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,12 @@
     "require": {
         "php": "^8.0",
         "laravel/framework": "8.*"
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "SeiyuNico\\LaravelCore\\Providers\\LaravelCoreProviders"
+            ]
+        }
     }
 }
