--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     ],
     "require": {
         "php": "^8.0",
-        "laravel/framework": "8.*"
+        "laravel/framework": ">=8.0"
     },
     "extra": {
         "laravel": {
